k8s/player-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: player-service, namespace: artemi }
spec:
  replicas: 1
  selector: { matchLabels: { app: player-service } }
  template:
    metadata: { labels: { app: player-service } }
    spec:
      containers:
      - name: player
        image: player-service:local
        imagePullPolicy: IfNotPresent
        ports: [ { containerPort: 8081 } ]
---
apiVersion: v1
kind: Service
metadata: { name: player-service, namespace: artemi }
spec:
  selector: { app: player-service }
  ports:
  - name: http
    port: 8081
    targetPort: 8081
